#pragma once
class Renderer {
 public:
  virtual void render_circle(float x, float y, float radius) = 0;
};
